# PurchasePilot

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: api.ts  globals.css  page.tsx
frontend/src/components/: Autocomplete.tsx  Categories.tsx  LandingPage.tsx  LoadingCard.tsx  Login.tsx  ProfileSettings.tsx  RedditConnectBanner.tsx  ReviewCard.tsx  SearchHistory.tsx  SearchInterface.tsx  SearchResults.tsx  SlideOutPanel.tsx  ThemeToggle.tsx  UserMenu.tsx
frontend/src/components/ui/: ToggleSwitch.tsx  alert.tsx  input.tsx
frontend/src/hooks/: use-toast.ts  useRecentSearches.ts
frontend/src/lib/: greeting.ts
frontend/src/types/: search.ts
nginx/: Dockerfile  default.conf
recommender/: Dockerfile  agent.py  analytics.py  app.py  auth.py  database.py  environment_vars.py  fetch_youtube_data.py  messages.py  models.py  process_comments.py  process_submissions.py  product_catalogue.py  product_db.py  reddit_service.py  save_data.py  schemas.py  structured_data.py  structured_output.py  utils.py
recommender/data/: data.json  output.json  reddit_data.json  sigma 70 200 lens.json  youtube_data.json  youtube_data2.json
